--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.20)
-project(monitor C)
+project(monitor CXX)
 
-set(CMAKE_C_STANDARD 99)
+set(CMAKE_CXX_STANDARD 11)
 
 find_library(LIBRT rt)
 
-add_executable(monitor main.c)
+add_executable(monitor main.cc)
 target_link_libraries(monitor ${LIBRT})
